# mactoro

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLI_USAGE.md  CONTRIBUTING.md  INSTALL.md  LICENSE  MANIFEST.in  README.md  RELEASE.md  action_recorder.py  coordinate_helper.py  final-fix.sh  final-homebrew-update.sh  fix-sha256.sh  homebrew-formula.rb  homebrew-tap-setup.sh  mactoro.rb  push-homebrew-update.sh  pyproject.toml  requirements.txt  setup-homebrew-tap.sh  setup.py  update-homebrew-formula.sh  update-to-v0.1.1.sh  window_controller.py
.github/workflows/: ci.yml  release.yml
example/: example_coordinates_record.json  example_loop_click.json
mactoro/: __init__.py  action_recorder.py  cli.py  coordinate_helper.py  window_controller.py
tests/: __init__.py  test_action_recorder.py  test_cli.py  test_window_controller.py
